[B]Version 1.1.74[/B]
Hdporn92 - new site
Camcaps - fix playback
thepornfull - fix playback & next page
Palimas - fix listing
Palimas - added "Lookupinfo" to context menu
Chaturbate - fix tags
Ividz - new site
TabooTube - new site
NoodleMagazine - new site