@@ -8,3 +8,4 @@ Chaturbate - fix tags
 Ividz - new site
 TabooTube - new site
 NoodleMagazine - new site
+cherry - fix error when stream not available
